# Simple3DEditor1.0

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.en.md  README.md  a.spv  anim.cpp  anim.h  appframe.h  attrtable.cpp  attrtable.h  audio.cpp  audio.h  avcodec.cpp  avcodec.h  build.bat  colorboard.cpp  colorboard.h  container.cpp  container.h  define.h  font.cpp  font.h  geodef.cpp  geodef.h  glfunc.cpp  glfunc.h  gltools.cpp  gltools.h  imgui.ini  inputbox.e  list.h  log.cpp  log.h  main.cpp  main.dmp  main.h  menu.cpp  menu.h  (+27 more)
Simple3DEditor/: CMakeLists.txt  RCa25012  main.cpp  main.h  string.rc
Simple3DEditor/base/: Appendable.h  Closeable.cpp  Object.h  Writable.cpp
Simple3DEditor/editor/: AnimationWindow.cpp  AttributeWindow.cpp  AttributeWindow.h  AudioCaptureWindow.cpp  AudioPlayerWindow.cpp  MainWindow.cpp  NodeMapWindow.cpp  PaintWindow.cpp  PaintWindow.h  RenderWindow.cpp  TreeWindow.cpp  TreeWindow.h  UVEditWindow.cpp
Simple3DEditor/editor/gui/: AnimationCurve.cpp  Container.cpp  Container.h  GUIUtils.cpp  UIManager.cpp
Simple3DEditor/editor/main/: ViewManager.cpp  ViewObject.cpp  ViewObject.h  Window.cpp
Simple3DEditor/editor/object/: AudioListenerObject.cpp  AudioListenerObject.h  AudioSourceObject.cpp  CameraObject.cpp  GUIManagerObject.cpp  GUIManagerObject.h  GUIMeshObject.cpp  GUIObject.h  MeshObject.cpp  SquareBezierObject.cpp  SquareBezierObject.h  WindowObject.h
Simple3DEditor/editor/windows/: AudioPlayerWindowObject.cpp  TreeWindowObject.h
Simple3DEditor/io/: IOStream.cpp  IOStream.h  ReadWrite.cpp  ReadWrite.h  Serializable.h
Simple3DEditor/lib/glut/: glut.h
Simple3DEditor/manager/: PluginManager.h  WindowManager.cpp  WindowManager.h
Simple3DEditor/util/: AudioUtils.cpp  Collection.h  DataBuffer.cpp  Delegate.h  HashMap.h  ThreadPool.h
Simple3DEditor/util/gl/: GLComputeProgram.cpp  GLEW.cpp  GLEW.h  GLProgram.cpp  GLRenderTexture2D.cpp  GLTexture2D.cpp  GLTexture2D.h  GLVertexArray.cpp
Simple3DEditor/util/math3d/: Camera.cpp  Geometry.h  Hash.h  LinearAlgebra.h  Mesh.cpp  Property.h
Simple3DEditor/util/os/: AppFrame.h  Resource.h  Time.h
Simple3DEditor/util/render/: BufferBuilder.cpp  VertexBuffer.cpp  VertexBuffer.h
imgui/: CMakeLists.txt
src/: CMakeLists.txt  define.h  main.cpp  main.h  res.h  res.rc  string.rc
src/base/: Appendable.cpp  Appendable.h  Closeable.cpp  Closeable.h  Factory.h  Flushable.cpp  Flushable.h  Object.cpp  Readable.cpp  Readable.h  Writable.cpp  Writable.h
src/base/factory/: Factory.h  FactoryRegistry.h
src/editor/: AllWindows.h  AnimationWindow.cpp  AnimationWindow.h  AttributeWindow.cpp  AttributeWindow.h  AudioCaptureWindow.cpp  AudioCaptureWindow.h  AudioPlayerWindow.cpp  AudioPlayerWindow.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  NodeMapWindow.cpp  NodeMapWindow.h  PaintWindow.cpp  PaintWindow.h  RenderWindow.cpp  RenderWindow.h  TreeWindow.cpp  TreeWindow.h  UVEditWindow.cpp  UVEditWindow.h
src/editor/dialog/: ColorBoard.h  Tips.h
src/editor/gui/: AnimationCurve.cpp  AnimationCurve.h  Container.cpp  Container.h  GUIUtils.cpp  GUIUtils.h  Menu.cpp  Menu.h  UIManager.cpp  UIManager.h
src/editor/main/: Operation.cpp  Operation.h  Tool.cpp  Tool.h  Transform.cpp  Transform.h  ViewManager.cpp  ViewManager.h  ViewObject.cpp  ViewObject.h  Window.cpp  Window.h
src/editor/object/: AllObjects.h  AudioListenerObject.cpp  AudioListenerObject.h  AudioSourceObject.cpp  AudioSourceObject.h  CameraObject.cpp  CameraObject.h  CubicBezierObject.cpp  CubicBezierObject.h  GUIManagerObject.cpp  GUIManagerObject.h  GUIMeshObject.cpp  GUIMeshObject.h  GUIObject.cpp  GUIObject.h  MeshObject.cpp  MeshObject.h  PointLightObject.cpp  PointLightObject.h  SquareBezierObject.cpp  (+2 more)
src/io/: File.h  IOBuffer.cpp  IOBuffer.h  IOStream.cpp  IOStream.h  ReadWrite.cpp  ReadWrite.h  Serializable.h
src/lib/: CMakeLists.txt
src/manager/: PluginManager.h  WindowManager.cpp  WindowManager.h
src/net/: Socket.h  TCPSocket.h  UDPSocket.h
src/util/: AudioUtils.cpp  AudioUtils.h  CMakeLists.txt  DataBuffer.cpp  DataBuffer.h  Delegate.h  Deque.h  HashMap.h  Iterable.h  Iterator.h  List.h  Queue.h  RBTree.h  String.cpp  String.h  StringBuilder.cpp  StringBuilder.h  Task.h  ThreadPool.h  Trie.h  Utils.h  Value.h
(+885 files in other folders)
