set(TARGET_NAME ImGui)
set(OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../build/")
set(LIBRARY_PATH "../lib")
set(EXECUTABLE_OUTPUT_PATH "${OUTPUT_PATH}/${TARGET_NAME}/")
set(LIBRARY_OUTPUT_PATH "${OUTPUT_PATH}/${TARGET_NAME}/")

file(GLOB IMGUI_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB IMGUI_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_library(${TARGET_NAME} STATIC ${IMGUI_HEADERS} ${IMGUI_SOURCES})

target_link_directories(${TARGET_NAME} PUBLIC ${LIBRARY_PATH})

target_include_directories(
	${TARGET_NAME}
	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/backends
	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../lib
)

target_link_libraries(
	${TARGET_NAME}
	glfw/glfw3
)

if(CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD 20)
endif()
